minor chnages for the mobile responsiveness

--- a/about.html
+++ b/about.html
@@ -182,7 +182,7 @@
                 <!-- Right Content -->
                 <div class="mv_image_col">
                     <div class="mv_image_wrapper">
-                        <img src="rajasthan.jpg" alt="Rajasthan Heritage" class="mv_img">
+                        <img src="/assets/images/rajasthan.jpg" alt="Rajasthan Heritage" class="mv_img">
                         <div class="mv_img_overlay">
                             <span>Heritage & Future</span>
                         </div>
