--- a/frontend/login.html
+++ b/frontend/login.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- favorite icon -->
-    <link rel="shortcut icon" href="/assets/images/logo.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="/frontend/assets/images/logo.svg" type="image/x-icon">
 
-    <link rel="icon" href="favicon.png" type="image/x-icon" />
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css" rel="stylesheet" />
-
-    <link rel="stylesheet" href="/assets/css/style.css" />
-    <script src="/assets/js/script.js" defer></script>
+    <script src="https://unpkg.com/lenis@1.1.20/dist/lenis.min.js"></script>
+    <link rel="stylesheet" href="/frontend/assets/css/common.css" />
+    <link rel="stylesheet" href="/frontend/assets/css/style.css" />
+    <script src="/frontend/assets/js/script.js" defer></script>
     <title>Ghummakkad | Login</title>
 </head>
 
 <body>
 
     <!-- Back to Home Link -->
-    <a href="/index.html" class="auth_back_link">
+    <a href="/frontend/index.html" class="auth_back_link">
         <i class="ri-arrow-left-line"></i> Back to Home
     </a>
 
