--- a/frontend/about.html
+++ b/frontend/about.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- favorite icon -->
-    <link rel="shortcut icon" href="/assets/images/logo.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="/frontend/assets/images/logo.svg" type="image/x-icon">
 
-    <link rel="icon" href="favicon.png" type="image/x-icon" />
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css" rel="stylesheet" />
+    <script src="https://unpkg.com/lenis@1.1.20/dist/lenis.min.js"></script>
 
-    <link rel="stylesheet" href="/assets/css/about.css" />
-    <script src="/assets/js/script.js"></script>
+    <link rel="stylesheet" href="/frontend/assets/css/common.css" />
+    <link rel="stylesheet" href="/frontend/assets/css/style.css" />
+    <link rel="stylesheet" href="/frontend/assets/css/about.css" />
+    <script src="/frontend/assets/js/script.js"></script>
     <title>Ghummakkad | About</title>
 </head>
 
@@ -21,8 +23,8 @@
     <header class="header">
         <div class="nav">
 
-            <a href="/index.html" class="nav_logo">
-                <span class="nav_logo-icon">G</span>
+            <a href="/frontend/index.html" class="nav_logo">
+                <img src="/frontend/assets/images/logo.svg" alt="Ghummakkad Logo" class="nav_logo-img">
                 <span class="nav_logo-text">Ghummakkad<br />
                     <h6>Book.Travel.Explore.</h6>
                 </span>
@@ -33,11 +35,12 @@
             </button>
 
             <ul class="nav_links" id="nav-links">
-                <li class="nav_item"><a href="/index.html" class="nav_link">Home</a></li>
-                <li class="nav_item"><a href="/about.html" class="nav_link active">About</a></li>
-                <li class="nav_item"><a href="/hotel.html" class="nav_link">Hotels</a></li>
-                <li class="nav_item"><a href="/contact.html" class="nav_link">Contact</a></li>
-                <li class="nav_item" id="login-link"><a href="/login.html" class="nav_link nav_link-icon"><i
+                <li class="nav_item"><a href="/frontend/index.html" class="nav_link">Home</a></li>
+                <li class="nav_item"><a href="/frontend/about.html" class="nav_link active">About</a></li>
+                <li class="nav_item"><a href="/frontend/packages.html" class="nav_link">Packages</a></li>
+                <li class="nav_item"><a href="/frontend/hotel.html" class="nav_link">Hotels</a></li>
+                <li class="nav_item"><a href="/frontend/contact.html" class="nav_link">Contact</a></li>
+                <li class="nav_item" id="login-link"><a href="/frontend/login.html" class="nav_link nav_link-icon"><i
                             class="ri-login-circle-line"></i>
                         Login</a></li>
             </ul>
@@ -46,7 +49,7 @@
     </header>
 
     <!-- About Hero Section -->
-    <section class="about-hero" id="about">
+    <section class="hero hero_about" id="about">
         <div class="section_container header_container">
             <p class="section_subheader hero_tagline">Welcome to the Land of Kings
             </p>
@@ -65,6 +68,41 @@
             <div class="hero_btn_group">
                 <a href="#story"><button class="hero_btn">Our Story</button></a>
                 <a href="#values"><button class="hero_btn hero_btn_outline">Our Values</button></a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Trust Section -->
+    <section class="trust_section">
+        <div class="trust_container active">
+            <div class="trust_grid">
+                <div class="trust_item">
+                    <div class="trust_icon-box">
+                        <i class="ri-government-fill"></i>
+                    </div>
+                    <div class="trust_content">
+                        <h4 class="trust_title">Govt. Registered</h4>
+                        <p class="trust_desc">Certified by Tourism Board</p>
+                    </div>
+                </div>
+                <div class="trust_item">
+                    <div class="trust_icon-box">
+                        <i class="ri-star-smile-fill"></i>
+                    </div>
+                    <div class="trust_content">
+                        <h4 class="trust_title">Rated 4.9/5</h4>
+                        <p class="trust_desc">By 50k+ Happy Travelers</p>
+                    </div>
+                </div>
+                <div class="trust_item">
+                    <div class="trust_icon-box">
+                        <i class="ri-shield-check-fill"></i>
+                    </div>
+                    <div class="trust_content">
+                        <h4 class="trust_title">100% Secure</h4>
+                        <p class="trust_desc">Certified Safe Bookings</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -182,7 +220,7 @@
                 <!-- Right Content -->
                 <div class="mv_image_col">
                     <div class="mv_image_wrapper">
-                        <img src="/assets/images/rajasthan.jpg" alt="Rajasthan Heritage" class="mv_img">
+                        <img src="/frontend/assets/images/rajasthan.jpg" alt="Rajasthan Heritage" class="mv_img">
                         <div class="mv_img_overlay">
                             <span>Heritage & Future</span>
                         </div>
@@ -297,8 +335,8 @@
 
             <div class="footer_col footer_col-brand">
 
-                <a href="#home" class="nav_logo footer_logo">
-                    <span class="nav_logo-icon">G</span>
+                <a href="/frontend/index.html#home" class="nav_logo footer_logo">
+                    <img src="/frontend/assets/images/logo.svg" alt="Ghummakkad Logo" class="nav_logo-img">
                     <div class="nav_logo-text">
                         Ghummakkad<br />
                         <h6>Book.Travel.Explore.</h6>
@@ -366,7 +404,13 @@
         </div>
 
         <div class="footer_bar">
-            <p>© 2025 Ghummakkad Yaatri. All rights reserved.</p>
+            <p>© <span id="copyright-year">2025</span> Ghummakkad Yaatri. All rights reserved.</p>
+            <div class="payment_icons">
+                <i class="ri-visa-line"></i>
+                <i class="ri-mastercard-line"></i>
+                <i class="ri-paypal-line"></i>
+                <i class="ri-bank-card-line"></i>
+            </div>
         </div>
     </footer>
 
