--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -11,7 +11,7 @@
 
     <script src="https://unpkg.com/lenis@1.1.20/dist/lenis.min.js"></script>
     <link rel="stylesheet" href="/frontend/assets/css/common.css" />
-    <link rel="stylesheet" href="/frontend/assets/css/style.css" />
+    <!-- style.css removed -->
     <link rel="stylesheet" href="/frontend/assets/css/contact.css" />
     <script src="/frontend/assets/js/script.js"></script>
     <title>Ghummakkad | Contact Us</title>
@@ -163,8 +163,10 @@
 
     <!-- FAQ Section -->
     <section class="section_container faq_container">
-        <p class="section_subheader">Common Queries</p>
-        <h2 class="section_header">Frequently Asked Questions</h2>
+        <div class="section_header_center">
+            <p class="section_subheader">Common Queries</p>
+            <h2 class="section_header">Frequently Asked Questions</h2>
+        </div>
         <div class="faq_grid">
             <details class="faq_item">
                 <summary>How can I book a tour package? <span class="faq_icon"><i class="ri-add-line"></i></span>
@@ -204,8 +206,10 @@
 
     <!-- Newsletter Section -->
     <section class="section_container newsletter_container">
-        <p class="section_subheader">Latest News & Features</p>
-        <h2 class="section_header">Newsletter Signup</h2>
+        <div class="section_header_center">
+            <p class="section_subheader">Latest News & Features</p>
+            <h2 class="section_header">Newsletter Signup</h2>
+        </div>
         <div class="newsletter_layout">
             <div class="newsletter_content">
                 <h2 class="newsletter_heading">Subscribe for Travel Updates</h2>
