--- a/frontend/about.html
+++ b/frontend/about.html
@@ -11,7 +11,7 @@
     <script src="https://unpkg.com/lenis@1.1.20/dist/lenis.min.js"></script>
 
     <link rel="stylesheet" href="/frontend/assets/css/common.css" />
-    <link rel="stylesheet" href="/frontend/assets/css/style.css" />
+    <!-- style.css removed -->
     <link rel="stylesheet" href="/frontend/assets/css/about.css" />
     <script src="/frontend/assets/js/script.js"></script>
     <title>Ghummakkad | About</title>
