--- a/frontend/packages.html
+++ b/frontend/packages.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <script src="https://unpkg.com/lenis@1.1.20/dist/lenis.min.js"></script>
     <link rel="stylesheet" href="/frontend/assets/css/common.css" />
-    <link rel="stylesheet" href="/frontend/assets/css/style.css" />
+    <!-- style.css removed -->
     <link rel="stylesheet" href="/frontend/assets/css/packages.css" />
     <script src="/frontend/assets/js/script.js" defer></script>
     <title>Ghummakkad | Trip Packages</title>
