--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -65,31 +65,38 @@
     </section>
 
     <!-- Contact Info Cards -->
+    <!-- Contact Info Cards -->
     <section class="section_container contact_info_container">
-        <div class="contact_cards_grid">
+        <div class="choose-us_grid">
 
-            <div class="contact_card">
-                <div class="contact_icon_box"><i class="ri-phone-line"></i></div>
-                <h4>Call Us</h4>
-                <p>Speak directly to our travel experts.</p>
-                <a href="tel:+911412345678" class="contact_link">+91 141 234 5678</a>
-                <span class="sub_text">Mon-Sun, 9am - 9pm</span>
+            <div class="feature_card">
+                <div class="feature_icon"><i class="ri-phone-line"></i></div>
+                <h4 class="feature_title">Call Us</h4>
+                <p class="feature_description">Speak directly to our travel experts.</p>
+                <a href="tel:+911412345678" class="contact_link"
+                    style="color: var(--secondary-color); font-weight: 700;">+91 141 234 5678</a>
+                <span class="sub_text" style="font-size: 0.8rem; color: var(--text-light); margin-top: 5px;">Mon-Sun,
+                    9am - 9pm</span>
             </div>
 
-            <div class="contact_card">
-                <div class="contact_icon_box"><i class="ri-mail-send-line"></i></div>
-                <h4>Email Us</h4>
-                <p>Send us your queries or itinerary requests.</p>
-                <a href="mailto:reservations@ghummakkad.com" class="contact_link">reservations@ghummakkad.com</a>
-                <span class="sub_text">We reply within 24 hours.</span>
+            <div class="feature_card">
+                <div class="feature_icon"><i class="ri-mail-send-line"></i></div>
+                <h4 class="feature_title">Email Us</h4>
+                <p class="feature_description">Send us your queries or itinerary requests.</p>
+                <a href="mailto:reservations@ghummakkad.com" class="contact_link"
+                    style="color: var(--secondary-color); font-weight: 700;">reservations@ghummakkad.com</a>
+                <span class="sub_text" style="font-size: 0.8rem; color: var(--text-light); margin-top: 5px;">We reply
+                    within 24 hours.</span>
             </div>
 
-            <div class="contact_card">
-                <div class="contact_icon_box"><i class="ri-map-pin-line"></i></div>
-                <h4>Visit Us</h4>
-                <p>Come say hello at our Jaipur office.</p>
-                <a href="#map" class="contact_link">Civil Lines, Jaipur, Rajasthan</a>
-                <span class="sub_text">Get Directions</span>
+            <div class="feature_card">
+                <div class="feature_icon"><i class="ri-map-pin-line"></i></div>
+                <h4 class="feature_title">Visit Us</h4>
+                <p class="feature_description">Come say hello at our Jaipur office.</p>
+                <a href="#map" class="contact_link" style="color: var(--secondary-color); font-weight: 700;">Civil
+                    Lines, Jaipur, Rajasthan</a>
+                <span class="sub_text" style="font-size: 0.8rem; color: var(--text-light); margin-top: 5px;">Get
+                    Directions</span>
             </div>
 
         </div>
